crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctypea_a_u000b.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPEa a\u000b\"####)"
---
[
    Token {
        data: "DOCTYPEa a\u{b}",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
